Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_pred[[\"acceleration\", \"displacement\", \"horsepower\", \"weight\"]].hist(figsize  = [6, 6]);"
+    "data_pred[[\"acceleration\", \"displacement\", \"horsepower\", \"weight\"]].histog(figsize  = [6, 6]);"
    ]
   },
   {
