Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     "loghorse = data_log[\"loghorse\"]\n",
     "logweight = data_log[\"logweight\"]\n",
     "\n",
-    "scaled_acc = (acc-min(acc))/(max(acc)-min(acc))\t\n",
+    "scaled_acc = (acc-min(acc))/(max(acc)-min(acc))\n",
     "scaled_disp = (logdisp-np.mean(logdisp))/np.sqrt(np.var(logdisp))\n",
     "scaled_horse = (loghorse-np.mean(loghorse))/(max(loghorse)-min(loghorse))\n",
     "scaled_weight= (logweight-np.mean(logweight))/np.sqrt(np.var(logweight))\n",
